更新文件 index.html

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         },
         {
             "word": "bit",
-            "word_CN": "一点",
+            "word_CN": "位",
             "page": 20,
             "context": "The smallest unit of information handled by a computer. A bit is one of two values, either a 0 or a 1. Eight bits constitute a byte, which can represent a letter or a number.",
             "context_CN": "计算机处理的最小信息单位。位是两个值之一（0或1）。八位组成一个字节，可以表示一个字母或数字。"
