更新文件 index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
+<!-- 源码开放，尽情查阅  -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,7 +64,6 @@
 
 
 </head>
-<!-- 源码开放，尽情查阅  -->
 
 <body>
     <v-app id="app">
@@ -233,7 +232,7 @@
         },
         {
             "word": "numeric data",
-            "word_CN": "数值日期",
+            "word_CN": "数值数据",
             "page": 21,
             "context": "Numbers that represent quantities and can be used in arithmetic operations.",
             "context_CN": "代表数量的数字，可以在算术运算中使用。"
